tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.diagnostic
diagnostic error code=P0001 family=parser message="structural capability syntax is only supported in function parameter types and generic bounds" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" bytes=85
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari" line=2 column=10 end_line=2 end_column=13 byte_start=22 byte_end=25 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-structural-capability-parameter.ari:2:10\n   |\n 2 |   value: has serialize() -> String,\n   |          ^^^"
  Note index=0 location=none message="`has method(...) -> Type` introduces a structural method requirement"
  Help index=0 location=none message="write it directly after a parameter colon, or as a generic bound such as `fn save[T: has serialize() -> String](x: T)` or `struct Box[T: has serialize() -> String]`"
